data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_458.wast
;; 9. **Validation of Loop with Unreachable Initialization**:    - Test a loop that initializes some variables and has a branch logic leading to an `unreachable` instruction if initialization goes wrong.    - **Constraint**: Ensures the loop initialization phase correctly sets up the variables and avoids improper `br` leading to `unreachable`.    - **Unreachable Code Execution**: Validates that initialization defects do not bring about reaching `unreachable`.

(assert_invalid
  (module
    (func $loop_unreachable_init
      (loop (param i32)
        i32.const 1
        br_if 0
        unreachable
      )
    )
  )
  "unreachable"
)